Style aside section

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 
 <body>
     <aside>
-        <img src="odin-lined.png" alt="The odin project logo">
+        <div class="logo">
+            <img src="odin-lined.png" alt="The odin project logo">
+            ODIN
+        </div>
+        <div class="img-credit">
+            Photo by
+            <a
+                href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Halie
+                West</a>
+            on
+            <a
+                href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+        </div>
     </aside>
     <main>
         <div class="top">
             <h2>This is not a real online service! You know you need something like this in your life to help you
                 realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
-            <h2>You <em>know</em>you want to.</h2>
+            <h2>You <em>know</em> you want to.</h2>
         </div>
         <div class="middle">
             <h2>Let's do this!</h2>
