--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="bottom">
             <button>Create Account</button>
-            <p>Already have an account? <a href="">Log in</a></p>
+            <p>Already have an account? <a class="login" href="">Log in</a></p>
         </div>
 
     </main>
