--- a/index.html
+++ b/index.html
@@ -31,14 +31,41 @@
                 realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
             <h2>You <em>know</em> you want to.</h2>
         </div>
-        <div class="middle">
-            <h2>Let's do this!</h2>
-            <form action=""></form>
-        </div>
-        <div class="bottom">
-            <button>Create Account</button>
-            <p>Already have an account? <a class="login" href="">Log in</a></p>
-        </div>
+        <form action="http://httpbin.org/post" method="post">
+            <div class="middle">
+                <h2>Let's do this!</h2>
+                <div class="contact-info">
+                    <div class="first-name">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="user_first_name" id="first-name">
+                    </div>
+                    <div class="last-name">
+                        <label for="last-name">Last Name</label>
+                        <input type="text" name="user_last_name" id="last-name">
+                    </div>
+                    <div class="email">
+                        <label for="email">Email</label>
+                        <input type="email" name="user_email" id="email">
+                    </div>
+                    <div class="phone">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" name="user_phone" id="phone">
+                    </div>
+                    <div class="password1">
+                        <label for="password1">Password</label>
+                        <input type="password" name="user_password" id="password1">
+                    </div>
+                    <div class="password2">
+                        <label for="password2">Password</label>
+                        <input type="password" name="user_password" id="password2">
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <button>Create Account</button>
+                <p>Already have an account? <a class="login" href="">Log in</a></p>
+            </div>
+        </form>
 
     </main>
 </body>
