--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 <div class="contact-info">
                     <div class="first-name">
                         <label for="first-name">First Name</label>
-                        <input type="text" name="user_first_name" id="first-name">
+                        <input type="text" name="user_first_name" id="first-name" required>
                     </div>
                     <div class="last-name">
                         <label for="last-name">Last Name</label>
-                        <input type="text" name="user_last_name" id="last-name">
+                        <input type="text" name="user_last_name" id="last-name" required>
                     </div>
                     <div class="email">
                         <label for="email">Email</label>
-                        <input type="email" name="user_email" id="email">
+                        <input type="email" name="user_email" id="email" required>
                     </div>
                     <div class="phone">
                         <label for="phone">Phone Number</label>
@@ -53,17 +53,17 @@
                     </div>
                     <div class="password1">
                         <label for="password1">Password</label>
-                        <input type="password" name="user_password" id="password1">
+                        <input type="password" name="user_password" id="password1" required>
                     </div>
                     <div class="password2">
-                        <label for="password2">Password</label>
-                        <input type="password" name="user_password" id="password2">
+                        <label for="password2">Confirm Password</label>
+                        <input type="password" name="" id="password2" required>
                     </div>
                 </div>
             </div>
             <div class="bottom">
                 <button>Create Account</button>
-                <p>Already have an account? <a class="login" href="">Log in</a></p>
+                <p>Already have an account? <a class="login" href="http://theodinproject.com/login">Log in</a></p>
             </div>
         </form>
 
