Use position to style the sidebar instead of flex

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <aside>
+    <div class="sidebar">
         <div class="logo">
             <img src="odin-lined.png" alt="The odin project logo">
             ODIN
@@ -24,7 +24,7 @@
             <a
                 href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </div>
-    </aside>
+    </div>
     <main>
         <div class="top">
             <h2>This is not a real online service! You know you need something like this in your life to help you
