--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-up Form</title>
+    <title>Server Sauron, Join Uruk-Hai</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,7 +27,7 @@
         <div class="top">
             <h1>"We must join with him. We must join with <em>Sauron</em>."</h1>
             <h2 class="saruman">- Saruman, the Third Age</h2>
-            <h3><em>The Dark Lord</em> rises again.  It's time for you to serve! You know you need something like this in
+            <h3><em>The Dark Lord</em> rises again. It's time for you to serve! You know you need something like this in
                 your life to help you
                 realize your deepest dreams.</h3>
             <h3>Sign up <em>now</em> to be tourtured and mutilated!</h3>
@@ -37,30 +37,37 @@
             <div class="middle">
                 <h2>Let's do this!</h2>
                 <div class="contact-info">
-                    <div class="first-name">
-                        <label for="first-name">First Name</label>
-                        <input type="text" name="user_first_name" id="first-name" required>
+                    <div>
+                        <label for="first-name">*First Name</label>
+                        <input type="text" name="user_first_name" id="first-name" required minlength="2" maxlength="10"
+                            placeholder="Ugluk">
                     </div>
-                    <div class="last-name">
+                    <div>
                         <label for="last-name">Last Name</label>
-                        <input type="text" name="user_last_name" id="last-name" required>
+                        <input type="text" name="user_last_name" id="last-name" minlength="2" maxlength="10"
+                            placeholder="Lurtz">
                     </div>
-                    <div class="email">
-                        <label for="email">Email</label>
-                        <input type="email" name="user_email" id="email" required>
+                    <div>
+                        <label for="email">*Email</label>
+                        <input type="email" name="user_email" id="email" required minlength="10" maxlength="20"
+                            placeholder="uglukl@mordor.com">
                     </div>
-                    <div class="phone">
+                    <div>
                         <label for="phone">Phone Number</label>
-                        <input type="tel" name="user_phone" id="phone">
+                        <input type="tel" name="user_phone" id="phone" minlength="7" maxlength="15"
+                            placeholder="6666666">
                     </div>
-                    <div class="password1">
-                        <label for="password1">Password</label>
-                        <input type="password" name="user_password" id="password1" required>
+                    <div>
+                        <label for="password1">*Password</label>
+                        <input type="password" name="user_password" id="password1" required maxlength="16"
+                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
+                            <p class="pwd-rules">At least 8 characters with:<br> 1 letter / 1 capital letter /<br>1 number / 1 special character</p>
+                        </div>
+                        <div>
+                            <label for="password2">*Confirm Password</label>
+                            <input type="password" name="user_password" id="password2" required maxlength="16"
+                                pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
                         <p class="error-msg">* Passwords do not match</p>
-                    </div>
-                    <div class="password2">
-                        <label for="password2">Confirm Password</label>
-                        <input type="password" name="" id="password2" required>
                     </div>
                 </div>
             </div>
@@ -69,7 +76,7 @@
                 <p>Already have an account? <a class="login" href="http://theodinproject.com/login">Log in</a></p>
             </div>
         </form>
-
+        <footer>Copyright &copy; sawfiz@github</footer>
     </main>
     <script src="index.js"></script>
 </body>
