--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>Let's do this!</h2>
                 <div class="contact-info">
                     <div>
-                        <label for="first-name">*First Name</label>
+                        <label for="first-name">First Name*</label>
                         <input type="text" name="user_first_name" id="first-name" required minlength="2" maxlength="10"
                             placeholder="Ugluk">
                     </div>
@@ -48,7 +48,7 @@
                             placeholder="Lurtz">
                     </div>
                     <div>
-                        <label for="email">*Email</label>
+                        <label for="email">Email*</label>
                         <input type="email" name="user_email" id="email" required minlength="10" maxlength="20"
                             placeholder="uglukl@mordor.com">
                     </div>
@@ -58,13 +58,13 @@
                             placeholder="6666666">
                     </div>
                     <div>
-                        <label for="password1">*Password</label>
+                        <label for="password1">Password*</label>
                         <input type="password" name="user_password" id="password1" required maxlength="16"
                             pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
                             <p class="pwd-rules">At least 8 characters with:<br> 1 letter / 1 capital letter /<br>1 number / 1 special character</p>
                         </div>
                         <div>
-                            <label for="password2">*Confirm Password</label>
+                            <label for="password2">Confirm Password*</label>
                             <input type="password" name="user_password" id="password2" required maxlength="16"
                                 pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
                         <p class="error-msg" hidden>* Passwords do not match</p>
