Add Uruk-hai image. Finetune styling.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main>
             <div class="top">
                 <h1>"We must join with him. We must join with <em>Sauron</em>."</h1>
-                <h2 class="saruman">- Saruman, the Third Age</h2>
+                <h2 class="saruman">- Saruman the White, the Third Age</h2>
                 <h3><em>The Dark Lord</em> rises again. It's time for you to serve! You know you need something like
                     this in
                     your life to help you
@@ -37,7 +37,7 @@
             </div>
             <form action="http://httpbin.org/post" method="post">
                 <div class="middle">
-                    <h2>Let's do this!</h2>
+                    <h1>Let's do this!</h1>
                     <div class="contact-info">
                         <div>
                             <label for="first-name">First Name*</label>
