--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div>
                             <label for="password2">Confirm Password*</label>
-                            <input type="password" name="user_password" id="password2" required maxlength="16"
+                            <input type="password" name="" id="password2" required maxlength="16"
                                 pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
                             <p class="error-msg" hidden>* Passwords do not match</p>
                         </div>
