--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
               <input type="password" name="user_password" id="password1" required maxlength="16"
                 pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
               <p class="pwd-rules">
-                <span id="char8">At least 8</span> <span id="allowed">allowed characters<br></span>
-                <span id="let1">1 letter /</span>
-                <span id="cap1">1 capital letter /<br></span>
-                <span id="num1">1 number /</span>
-                <span id="spl1">1 of @$!%*?&</span>
+                <span id="char8">At least 8</span> <span id="allowed">allowed characters:<br></span>
+                <span id="let1">letters /</span>
+                <span id="cap1">capital letters /<br></span>
+                <span id="num1">numbers /</span>
+                <span id="spl1">@$!%*?&</span>
               </p>
             </div>
             <div>
